--- a/web/assets/css/styleban.css
+++ b/web/assets/css/styleban.css
@@ -2,7 +2,12 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i');
 @import url('https://fonts.googleapis.com/css?family=Great+Vibes');
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
-
+/*FONT Satisfy*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -76,7 +81,9 @@ body{
     border: 2px solid #4F52D6;
     
 }
-
+.section{
+    background-color: rgb(252, 252, 252);
+}
 
 @media only screen and (max-width: 700px) {
     .banner{
@@ -259,3 +266,66 @@ html{
 }
 
 
+/* Nuevo Estilo */
+.about {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    gap: 2rem;
+    background: transparent;
+  }
+  
+  .about .image {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 30rem;
+    flex: 1 1 30rem;
+  }
+  
+  .about .image img {
+    width: 100%;
+  }
+  
+  .about .content {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 30rem;
+    flex: 1 1 30rem;
+  }
+  
+  .about .content span {
+    font-family: "Satisfy", cursive;
+    font-size: 3rem;
+    color: #27ae60;
+  }
+  .pdt50 h2 span{
+    font-family: 'Lobster', cursive;
+    font-size: 3rem;
+    color: #130f40;
+  }
+  .about .content .title {
+    font-family: 'Lobster', cursive;
+    font-size: 3rem;
+    padding-top: 0.5rem;
+    color: #130f40;
+  }
+  @media (max-width: 1135px) {
+    .about .image img {
+      display: none;
+    }
+  }
+  
+  @media (max-width: 991px) {
+    .about {
+        padding: 2rem;
+    }
+  }
+  
+  @media (max-width: 768px) {
+  }
+  
+  @media (max-width: 450px) {
+  }
