--- a/web/assets/css/agretemas.css
+++ b/web/assets/css/agretemas.css
@@ -133,12 +133,13 @@ body{
 
 .contformulario .row form{
   flex:1 1 25rem;
-  padding:2rem;
+  padding:1rem;
   box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
   border-radius: .5em;
   display: inline-block;
   grid-template-columns:auto auto;
   gap: 10px;
+  width: 100%;
 }
 
 .contformulario .row form .inputBox{
