--- a/web/assets/css/styleforo.css
+++ b/web/assets/css/styleforo.css
@@ -284,3 +284,150 @@ body {
    }
 }
 
+
+/* CODIGO SIDEBAR */
+
+:root{
+ --orange:#9494fc ;
+}
+
+.cont_formular{
+   width: 100%;
+   height: auto;
+   padding: 15px;
+}
+
+.container-contformulario{
+ font-family: 'Nunito', sans-serif;
+}
+
+.boton1{
+ display: inline-block;
+ margin-top: 1rem;
+ background:var(--orange);
+ color:#fff;
+ padding:.8rem 3rem;
+ border:.2rem solid var(--orange);
+ cursor: pointer;
+ font-size: 1rem;
+ width: 100%;
+}
+
+.boton1:hover{
+ background:#d6d6fd ;
+ border-color: #d6d6fd ;
+ color:#a9a9af ;
+ font-weight: bold;
+ transition: 0.3s ease-in-out all;
+}
+
+.contformulario .row{
+ display: flex;
+ flex-wrap: wrap;
+ gap:1.5rem;
+ align-items: center;
+ margin: 0 1rem;
+}
+
+.contformulario .row .image{
+ flex:1 1 25rem;
+}
+
+.contformulario .row .image img{
+ width:100%;
+}
+
+.contformulario .row form{
+ flex:1 1 25rem;
+ padding:1rem;
+ box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+ border-radius: .5em;
+ display: inline-block;
+ grid-template-columns:auto auto;
+ gap: 10px;
+ width: 100%;
+}
+
+.contformulario .row form .inputBox{
+ padding:.5rem 0;
+}
+.contformulario .row form .boton1{
+ grid-column: 1 / 3;
+}
+
+.contformulario .row form .inputBox input, select, textarea{
+ font-family: 'Nunito', sans-serif;
+ width:100%;
+ padding:.5rem 0 .5rem .5rem;
+ border:.1rem solid rgba(0,0,0,.1);
+ font-size: 1em;
+ color:#333;
+ text-transform: none;
+}
+.contformulario .row form .inputBox input:focus , select:focus, textarea:focus{
+ border-color: #8494f4  ;
+ outline: 0 none;
+ box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 8px rgba(55, 0, 255, 0.6);
+}
+
+.contformulario .row form .inputBox h3{
+ /*font-size: 1em;*/
+ color:#666;
+ margin: 0.5rem 0;
+ font-weight: bold;
+}
+
+.title{
+   font-family: 'Satisfy', cursive;
+   font-size: 3em;
+   color: #27ae60;
+}
+
+.about .content {
+   -webkit-box-flex: 1;
+   -ms-flex: 1 1 30rem;
+   flex: 1 1 30rem;
+ }
+ 
+ .about .content span {
+   font-family: "Satisfy", cursive;
+   font-size: 3rem;
+   color: #27ae60;
+ }
+
+ .boton_personalizado{
+   display: inline-block;
+   text-align: center;
+   justify-content: center;
+   align-items: center;
+   text-decoration: none;
+   padding: 5px;
+   margin: 5px;
+   color: #ffffff;
+   border: none;
+   background: gray;
+   border-radius: 5px;
+   cursor: pointer;
+   font-size:medium;
+ }
+
+ .boton_personalizado:hover{
+   background: black;
+   transition: 0.3s ease-in-out all;
+ }
+
+@media (max-width:967px){
+ .contformulario .row .image img{
+   display: none;
+ }
+}
+@media (max-width:580px){
+ .contformulario .row form .inputBox input, select, textarea{
+   width:100%;
+ }
+ .contformulario .row form{
+   display: block;
+ }
+}
+
+
