Container cursos, Reymundez S

--- a/web/assets/css/cursos.css
+++ b/web/assets/css/cursos.css
@@ -130,7 +130,7 @@
   width: 100%;
 }
 .container-fluid .container-card-course .row {
-  background-color: #f8fafe;
+  /* background-color: #f8fafe; */
   margin: 0;
   padding: 0;
   width: 100%;
