--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -6,7 +6,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Poppins:wght@400;700&family=Work+Sans&display=swap");
 
-
 /* PANEL */
 .div-container-panel {
   background-image: url(../images/zyro-image.png);
@@ -356,7 +355,7 @@
   font-family: "Poppins", sans-serif;
 }
 .container-fluid-course .line {
-  background: #99CCFF;
+  background: #99ccff;
   width: 154px;
   height: 6px;
   margin-bottom: 21px;
@@ -424,7 +423,7 @@
     padding: 1rem;
   }
 }
-@media (max-width: 991px){
+@media (max-width: 991px) {
   .container-fluid-course .row .card .row img {
     padding: 1.5rem 0;
   }
@@ -435,7 +434,7 @@
     font-size: 12px;
   }
 }
-@media (max-width: 767px){
+@media (max-width: 767px) {
   .container-fluid-course .row .card .row img {
     padding: 1.5rem 0;
   }
@@ -443,7 +442,7 @@
     padding: 0;
   }
 }
-@media (max-width: 430px){
+@media (max-width: 430px) {
   .container-fluid-course .row .card .row h4 {
     font-size: 16px;
   }
@@ -457,7 +456,7 @@
     padding: 0 15px;
   }
 }
-@media (max-width: 333px){
+@media (max-width: 333px) {
   .container-fluid-course .row .card .row img {
     min-width: 65px;
     max-width: 70px;
@@ -474,66 +473,44 @@
 }
 
 /* EMPRESAS */
-.container-empresas {
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  padding: 0 0 4rem 0;
-}
-.container .info-part {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 593px;
-  padding: 0 2rem 0 0;
-  margin: 15px 0;
-}
-.container .info-part .line {
-  background: #99CCFF;
+.container-bussines .line {
+  background: #99ccff;
   width: 154px;
   height: 6px;
   margin-bottom: 21px;
 }
-.container .info-part h2 {
+
+.container-bussines h2 {
   font-size: 36px;
   font-family: "Inter", sans-serif;
-  color: #7C83FD;
+  color: #7c83fd;
   font-weight: bold;
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
-.container .info-part ul {
+
+.container-bussines ul {
   color: #898989;
-  line-height: 18.77px;
   padding: 15px;
 }
-.container .info-part ul li {
+.container-bussines ul li {
   position: relative;
   margin-bottom: 15px;
   line-height: 2rem;
 }
-.container .info-part ul li i{
-  color: #99CCFF;
+.container-bussines ul li i {
+  color: #99ccff;
 }
-.container .info-part ul li::marker {
-  color: #99CCFF;
-  font-size: x-large;
-}
-.container .info-part > span {
+
+.container-bussines .box-email > span {
   font-family: Work Sans;
   font-size: 13px;
-  line-height: 15px;
 }
-.container .info-part .box-email {
+.container-bussines .box-email {
+  max-width: 100%;
   margin-top: 16px;
 }
-.container .info-part .box-email .row {
-  width: 100%;
-  display: flex;
-}
-.container .info-part .box-email .row input[type=email] {
-  border: 1px solid #7C83FD;
+.container-bussines .box-email input[type="email"] {
+  border: 1px solid #7c83fd;
   box-sizing: border-box;
   border-radius: 6px;
   font-family: Poppins;
@@ -541,14 +518,15 @@
   text-align: center;
   outline: none;
   margin-right: 15px;
+  padding: 10px 15px;
   flex: 1;
 }
-.container .info-part .box-email .row input[type=email]::placeholder {
-  color: #CFD2FF;
+.container-bussines .box-email input[type="email"]::placeholder {
+  color: #cfd2ff;
 }
-.container .info-part .box-email .row button {
+.container-bussines .box-email button {
   border: none;
-  background: #99CCFF;
+  background: #99ccff;
   border-radius: 6px;
   color: #fff;
   font-family: Poppins;
@@ -557,23 +535,20 @@
   padding: 10px 15px;
   white-space: nowrap;
 }
-.container .info-part .box-email .row button:hover {
+.container-bussines .box-email button:hover {
   filter: drop-shadow(0 0 3px #00000040);
 }
-.container .info-part .box-email .msg-error {
-  color: #EB5757;
+.container-bussines .box-email .msg-error {
+  color: #eb5757;
   font-size: small;
   font-family: Work Sans;
   display: none;
 }
-.container .info-part .box-email .msg-error.show {
+.container-bussines .box-email .msg-error.show {
   display: block;
 }
-.container .turn-container {
-  width: 593px;
-  height: 439px;
-}
-.box-rotate {
+
+.container-bussines .box-rotate {
   position: relative;
   height: 100%;
   transform-style: preserve-3d;
@@ -581,48 +556,43 @@
   transform: rotateY(0);
   perspective: 1000px;
 }
-.box-rotate.active {
+.container-bussines .box-rotate.active {
   transform: rotateY(180deg);
 }
-.box-rotate.active .front {
-  opacity: 0%;
+.box-rotate {
+  height: 100%;
+  position: relative;
 }
 .box-rotate .front {
-  width: 100%;
   height: 100%;
   position: absolute;
-  backface-visibility: hidden;
+  background-color: #fff;
 }
-.box-rotate .front .box-image {
-  position: relative;
-  width: 100%;
+.box-rotate .front .box-image > img {
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.box-rotate .front .box-image img {
-  position: relative;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 100vw
 }
 .box-rotate .back {
   width: 100%;
   height: 100%;
-  position: absolute;
+  top: 0;
+  left: 0;
+  position: relative;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
   transform: rotateY(180deg);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #fff;
 }
 .box-rotate .back .header {
   display: flex;
   padding: 15px 20px;
-  background: #CCE4FC;
+  background: #cce4fc;
   border-radius: 6px 6px 0px 0px;
 }
 .box-rotate .back .header .box-image img {
@@ -633,16 +603,16 @@
   font-weight: bold;
   font-size: 18px;
   text-transform: uppercase;
-  color: #7C83FD;
+  color: #7c83fd;
 }
 .box-rotate .back .header .box-text span {
   font-family: Work Sans;
   font-size: 13px;
-  color: #A8A8A8;
+  color: #a8a8a8;
 }
 .box-rotate .back .formu {
   width: 100%;
-  background: #DFEFFF;
+  background: #dfefff;
   border-radius: 0 0 6px 6px;
   padding: 15px 0;
 }
@@ -661,7 +631,7 @@
   display: grid;
   grid-template-columns: 31px 41px;
   align-items: center;
-  background: #C1E1EE;
+  background: #c1e1ee;
   padding-left: 5px;
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
@@ -673,7 +643,7 @@
 .box-rotate .back .formu .row-icon > .selItem > .btn-select > .code {
   background: inherit;
   cursor: inherit;
-  color: #5D5FEF;
+  color: #5d5fef;
 }
 .box-rotate .back .formu .row-icon > .selItem > ul.sel {
   position: absolute;
@@ -707,7 +677,7 @@
 .box-rotate .back .formu .row-icon > .selItem > ul.sel > li > img {
   padding-right: 10px;
 }
-.box-rotate .back .formu .row-icon > input[type=tel] {
+.box-rotate .back .formu .row-icon > input[type="tel"] {
   flex: 1;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
@@ -724,13 +694,13 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: #C1E1EE;
+  background: #c1e1ee;
 }
 .box-rotate .back .formu .row-three > :nth-child(1) {
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
 }
-.box-rotate .back .formu .row-three > input[type=number] {
+.box-rotate .back .formu .row-three > input[type="number"] {
   appearance: textfield;
   border-radius: 0;
   text-align: center;
@@ -761,21 +731,21 @@
 .box-rotate .back .formu .group-control span:nth-child(1) {
   font-family: Work Sans;
   font-size: 12px;
-  color: #5D5FEF;
+  color: #5d5fef;
   margin-bottom: 5px;
 }
 .box-rotate .back .formu .group-control input,
 .box-rotate .back .formu .group-control textarea {
   border: none;
   outline: none;
-  background: #CCE4FC;
+  background: #cce4fc;
   border-radius: 6px;
   padding: 0 10px;
   height: 34px;
   resize: none;
+  width: 100%;
 }
 .box-rotate .back .formu .group-control textarea {
-  width: calc(100% - 20px);
   padding: 5px 10px;
   height: auto;
 }
@@ -788,76 +758,75 @@
 .box-rotate .back .formu .box-btn > button {
   border: none;
   outline: none;
-  background: #99CCFF;
+  background: #99ccff;
   border-radius: 15px;
   font-family: Work Sans;
   font-size: 12px;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   cursor: pointer;
   padding: 10px 50px;
 }
 
-@media (max-width: 1200px) {
-  .container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-  .container .info-part,
-.container .turn-container {
-    width: 100%;
-    max-width: 593px;
-    margin-bottom: 15px;
-    padding: 2rem 15px;
+.box-rotate .row-three > .icon{
+  cursor: pointer;
+  user-select: none;
+}
+
+@media (max-width: 757px) {
+  .box-rotate .front .box-image > img {
+    height: 100%;
+    width: auto;
   }
 }
-.container .turn-container .formu textarea {
-  width: 100% !important
-}
+
 @media (max-width: 650px) {
-  .container {
-    display: flex;
-    flex-direction: column;
+  .container-bussines > .col > .box-email > .d-flex {
+    flex-wrap: wrap;
+  }
+
+  .container-bussines > .col > .box-email > .d-flex > * {
     width: 100%;
-    padding: 0 15px;
-    box-sizing: border-box;
-  }
-  .container .info-part,
-.container .turn-container {
-    width: 100%;
-    max-width: 593px;
-    margin-bottom: 15px;
-  }
-  .container .info-part .box-email .row {
-    flex-direction: column;
-  }
-  .container .info-part .box-email .row input[type=email] {
-    padding: 10px 15px;
-    margin-bottom: 15px;
     margin-right: 0;
+    margin-bottom: 10px;
   }
-  .container .turn-container {
+  .box-rotate {
     margin: 15px 0;
   }
-  .container .turn-container > #boxRotate > .back > .formu > .row {
+  .box-rotate#boxRotate > .back > .formu > .row {
     grid-template-columns: 100% !important;
   }
-  .container .turn-container .row-icon {
+  .box-rotate .front .box-image > img {
+    height: auto;
+    width: 100%;
+  }
+  .box-rotate .row-icon {
     grid-template-columns: 50px calc(100% - 50px) !important;
   }
-  .container .turn-container .row-icon .btn-select {
+  .box-rotate .row-icon .btn-select {
     grid-template-columns: 15px 35px !important;
   }
-  .container .turn-container .row-icon .btn-select input {
+  .box-rotate .row-icon .btn-select input {
     margin: 0;
     margin-left: 5px;
     padding: 0;
   }
-  .container .turn-container .formu textarea {
-    width: 100% !important
+  .box-rotate .formu textarea {
+    width: 100% !important;
   }
-  .container .turn-container .row-three {
+  .box-rotate .row-three {
     grid-template-columns: 50px calc(100% - 100px) 50px !important;
+  }
+}
+
+@media (max-width: 580px) {
+  .container-bussines > .col-12 > .box-email > .d-flex {
+    flex-wrap: wrap;
+  }
+
+  .container-bussines > .col-12 > .box-email > .d-flex > * {
+    width: 100% !important;
+    margin-right: 0 !important;
+    margin-bottom: 10px !important;
   }
 }
