Proceso de Cursos Rediseñado, Arreglo de Informacion Cursos, Jorge Martinez

--- a/web/assets/css/agretemas.css
+++ b/web/assets/css/agretemas.css
@@ -1,88 +1,46 @@
 @import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
 
 *{
     padding: 0%;
     margin: 0%;
 }
-/*
-html{
-    font-family: 'Poppins', sans-serif;
-    font-size: 10px;
-}
-
-body {
-    padding: 1rem 3rem 0 6rem;
-}
-
-.cont_padre{
-    border: 1px solid transparent; 
-    padding: 5% 25%;
-    align-items: center;
-}
-
-.cont_text{
-    background: #ffffff;
-    width: 50%;
-    height: 100%;
-    margin: auto;
-    border: 1px solid #dfdfdf;
-}
-.cont_text h2{
-    background: #f7f7f7;
-    height: 10%;
-    text-align: center;
-    padding-top: 2.5%;
-}
-.cont_text h3{
-    background: #f7f7f7;
-    height: 10%;
-    padding: 2.5% 0px 3% 3%;
-    border-bottom: 1px solid #dfdfdf;
-}
-.cont_formu{
-    width: 100%;
-    height: auto;
-    padding: 15px 20px 0px 20px ;
-}
-
-.cont_formu input{
-    font-size: 20px;
-}
-
-.cont_formu textarea{
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-
-.cont_formu .boton{
-    border: none;
-    padding: 1% 5%;
-    cursor: pointer;
-    background: rgb(239, 239, 239);
-    border-radius: 5px;
-    font-size: 20px;
-}
-.cont_formu .option{
-    font-size:15px;
-}
-.cont_formu .select{
-    width: 100%;
-    height: 100%;
-    border:  none;
-    outline: none;
-    text-align: left;
-    font-size: 15px;
-}
-*/
 
 /* CODIGO SIDEBAR */
 body{
     background: #F7F7F7;
 }
+.modal-content{
+  border:none;
+  margin: 0 auto;
+}
+.modal-header{
+  background-color: #4F52D6;
+  color: #fff;
+}
+
+.modal-title{
+  margin: 0 30% 0 34%;
+  font-family: 'Poppins', serif;
+}
+.modal-header .close{
+  color: #fff;
+}
+
+.cerrar-modal{
+  background-color: #4F52D6;
+  color: #fff;
+}
+
+.cerrar-modal:hover{
+  background-color:  #fff;
+  color:#4F52D6;
+}
 
 :root{
-  --orange:#9494fc ;
+  --orange:#4F52D6 ;
 }
 
 .cont_formular{
@@ -96,23 +54,93 @@ body{
 }
 
 .boton1{
-  display: inline-block;
-  margin-top: 1rem;
+  float: left;
+  margin: .5rem;
   background:var(--orange);
+  border-radius: 30px;
   color:#fff;
-  padding:.8rem 3rem;
+  padding:.8rem 1rem;
   border:.2rem solid var(--orange);
   cursor: pointer;
   font-size: 1rem;
+  width: 45%;
+}
+
+.caja-opciones{
+  display: grid;
+  grid-template-columns: auto auto auto auto;
   width: 100%;
+  gap: 10px;
 }
 
 .boton1:hover{
-  background:#d6d6fd ;
-  border-color: #d6d6fd ;
-  color:#a9a9af ;
+  background:#fff ;
+  border-color: var(--orange) ;
+  color:var(--orange) ;
   font-weight: bold;
   transition: 0.3s ease-in-out all;
+}
+.boton2:hover{
+  float: left;
+  margin: .5rem;
+  background:var(--orange);
+  border-radius: 30px;
+  color:#fff;
+  text-decoration: none;
+  padding:.8rem 1rem;
+  border:.2rem solid var(--orange);
+  transition: 0.3s ease-in-out all;
+}
+.boton2{
+  float: left;
+  margin: .5rem;
+  background: #fff;
+  color:var(--orange);
+  padding:.8rem 1rem;
+  text-align: center;
+  border-radius: 30px;
+  border:.2rem solid var(--orange);
+  cursor: pointer;
+  font-size: 1rem;
+  width: 45%;
+}
+
+.btn-modulos{
+  width: 100%;
+  border: 2px solid var(--orange);
+  padding:.4rem 2rem;
+  background-color: #fff;
+  color: var(--orange);
+}
+
+.btn-modulos:hover{
+  background-color: var(--orange);
+  color: #fff;
+  border: 2px solid #fff;
+  transition: 0.3s ease-in-out all;
+}
+.cambio-enlinea{
+  display: inline-block;
+}
+
+.btn-ver{
+  display: inline-block;
+  margin: 0 0 0 6rem;
+}
+
+.boton-ver:hover{
+  background-color: var(--orange);
+  color: #fff;
+  border: 2px solid #fff;
+  transition: 0.3s ease-in-out all;
+}
+
+.boton-ver{
+  border: 2px solid var(--orange);
+  padding:.4rem 2rem;
+  border-radius: 30px;
+  background-color: #fff;
+  color: var(--orange);
 }
 
 .contformulario .row{
@@ -120,26 +148,44 @@ body{
   flex-wrap: wrap;
   gap:1.5rem;
   align-items: center;
+  position: relative;
   margin: 0 1rem;
 }
 
 .contformulario .row .image{
   flex:1 1 25rem;
+  position: absolute;
+  top: -9%;
+  left: 600px;
+  z-index: 1;
 }
 
 .contformulario .row .image img{
-  width:100%;
+  width:90%;
+}
+
+.contformulario .row .image2{
+  flex:1 1 25rem;
+  position: absolute;
+  top: -6%;
+  left: 800px;
+  z-index: -1;
+}
+
+.contformulario .row .image2 img{
+  width:80%;
 }
 
 .contformulario .row form{
   flex:1 1 25rem;
   padding:1rem;
-  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
-  border-radius: .5em;
+  margin: 0 30rem 0 20rem;
   display: inline-block;
+  background-color: #fff !important;
   grid-template-columns:auto auto;
   gap: 10px;
-  width: 100%;
+  z-index: 2;
+  width: 200px;
 }
 
 .contformulario .row form .inputBox{
@@ -166,15 +212,20 @@ body{
 
 .contformulario .row form .inputBox h3{
   /*font-size: 1em;*/
-  color:#666;
+  color:#262631;
   margin: 0.5rem 0;
   font-weight: bold;
+  font-size: 1.2rem;
 }
 
 .title{
-    font-family: 'Satisfy', cursive;
-    font-size: 3em;
-    color: #27ae60;
+  display: inline-block;
+  font-family: 'Poppins', cursive;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 1.6em;
+  width: 100%;
+  color:#070707;
 }
 
 .about .content {
@@ -209,17 +260,84 @@ body{
     background: black;
     transition: 0.3s ease-in-out all;
   }
+  @media (max-width:1274px){
+      .contformulario .row form{
+        margin: 0 30rem 0 11rem;
+      }
+      .contformulario .row .image{
+        left: 570px;
+      }
+      
+  }
 
-@media (max-width:967px){
+@media (max-width:1136px){
+  .contformulario .row .image2 img{
+    display: none;
+  }
+    .contformulario .row form{
+      margin: 0 20rem 0 12rem;
+    }
+}
+@media (max-width:991px){
+  .contformulario .row form{
+    margin: 0 17rem 0 8rem;
+  }
+  .contformulario .row .image{
+    left: 500px;
+  }
+  .btn-ver{
+    margin: 0 0 0 6rem;
+  }
+  .caja-opciones{
+    display: grid;
+    grid-template-columns: auto auto;
+    width: 100%;
+    gap: 10px;
+  }
+}
+@media (max-width:885px){
   .contformulario .row .image img{
     display: none;
   }
+  .contformulario .row form{
+    margin: 0 4rem;
+  }
+  .btn-ver{
+    margin: 0 0 0 40%;
+  }
+  .modal-title{
+    margin: 0 20% 0 25%;
+  }
 }
-@media (max-width:580px){
+@media (max-width:715px){
+  .btn-ver{
+    margin: 0 0 0 20%;
+  }
+}
+
+@media (max-width:592px){
   .contformulario .row form .inputBox input, select, textarea{
     width:100%;
   }
   .contformulario .row form{
-    display: block;
+    margin: 0 1rem;
+  }
+}
+
+@media (max-width:500px){
+  .modal-title{
+    margin: 0 10% 0 14%;
+  }
+}
+
+@media (max-width:400px){
+  .modal-title{
+    margin: 0 3% 0 3%;
+  }
+  .caja-opciones{
+    display: grid;
+    grid-template-columns: auto;
+    width: 100%;
+    gap: 5px;
   }
 }
