--- a/web/assets/css/stylebuttonAtras.css
+++ b/web/assets/css/stylebuttonAtras.css
@@ -1,15 +1,16 @@
 .btn-before-custom {
   padding: 10px 25px;
   color: #fff;
-  border-top-right-radius: 25px;
-  border-bottom-left-radius: 25px;
+  font-size: 20px;
   background: #4F52D6;
+  border-radius: 30px;
   font-weight: 200;
   margin-left: 25px;
 }
 
 .btn-before-custom:hover {
   font-weight: 300;
+  text-decoration: none;
   color: #fff;
   opacity: 1;
 }
